# rails

./: .gitignore  CLAUDE.md  CURSOR.md  GEMINI.md  QWEN.md  README.md  RIZOME.md  WINDSURF.md  pyproject.toml
.github/workflows/: publish.yml
examples/: adapters.py  basic_usage.py  enhanced.py  enhanced_example.py  error_recovery.py  example_usage.py  modern_adapters.py  modern_enhanced.py  queue_management.py
src/rails/: __init__.py  conditions.py  core.py  execution.py  injectors.py  lifecycle.py  store.py  types.py
src/rails/adapters/: __init__.py  base.py  langchain.py  prefect.py  smolagents.py
tests/: __init__.py  test_adapters_native.py  test_rails.py
